src/objects/Contacts_And_Orgs_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Application settings for the Contacts and Organizations package of the Nonprofit Starter Pack</description>
    <fields>
        <fullName>Account_Processor__c</fullName>
        <inlineHelpText>Setting for the Account model. Should be &quot;One-to-one&quot; or &quot;Individual&quot;. Replaces the custom field Contact.SystemAccountProcessor__c</inlineHelpText>
        <label>Account Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISABLE_IndividualAccounts_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>!!WARNING!!
DISABLES the IndividualAccounts.trigger (Contact, before i/u, after i/u/d)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_IndividualAccounts_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_OpportunityAccount_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>!!WARNING!!
DISABLES the OpportunityAccount.trigger (Opportunity, before insert)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_OpportunityAccount_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_OpportunityContactRoles_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>!!WARNING!!
DISABLES the OpportunityContactRoles.trigger (Opportunity, after insert)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_OpportunityContactRoles_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DISABLE_OpportunityPayments_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>!!WARNING!!
DISABLES the OpportunityPayments.trigger (Opportunity, after insert, after update)
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
        <label>DISABLE_OpportunityPayments_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Opp_on_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Opp on Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Account_Model_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to turn off the Account Model trigger. Accounts will no longer be automatically created for Contacts. Only use this if you understand the ramifications. Turning off the account model could get your data into an inconsistent state.</inlineHelpText>
        <label>Disable Account Model Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opportunity_Contact_Role_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to turn on the automatic creation of Opportunity Contact Roles for newly created Opportunities in the One-to-One model.</inlineHelpText>
        <label>Enable Opportunity Contact Role Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls if the package automatically checks for new updates and versions.</inlineHelpText>
        <label>Enable Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Package_Update__c</fullName>
        <label>Has Package Update</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_Check__c</fullName>
        <inlineHelpText>The date/time of the last callout to check for new versions of the NPSP packages.</inlineHelpText>
        <label>Last Update Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Package_Version__c</fullName>
        <label>Max Package Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_to_One_RecordTypeID__c</fullName>
        <inlineHelpText>The ID of the record type to be used for 1x1 accounts. If none is selected, the account will default to the user&apos;s default account selection.</inlineHelpText>
        <label>One-to-One RecordTypeID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Role_Default_role__c</fullName>
        <inlineHelpText>Default role for the primary Opportunity Contact Role</inlineHelpText>
        <label>Opportunity Contact Role Default role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Update_URL__c</fullName>
        <label>Package Update URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payments_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables automatic payments for new Opportunities/Donations.</inlineHelpText>
        <label>Payments Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Check_Interval__c</fullName>
        <defaultValue>90</defaultValue>
        <inlineHelpText>The number of days between NPSP callouts to check for new versions of this package. The default value is 90 days.</inlineHelpText>
        <label>Update Check Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contacts And Orgs Settings</label>
</CustomObject>